# linux_library_gst-plugins-renderer

./: Makefile  Makefile.am  configure.ac  gstnxrenderer.c  gstnxrenderer.h
packaging/: gst-plugins-renderer.spec
